--- a/Lang/en.ini
+++ b/Lang/en.ini
@@ -47,22 +47,8 @@ smClear=Clear
 smClearHint=Clear all
 smCopyAll=Copy all
 smCopyAllHint=Copy all to buffer
-smpCopyAllHint=Copy all to buffer
-smCopyNames=Copy only names
-smCopyNamesHint=Copy only names to buffer
-smpSaveHint=Save file list
-smpNew=New
-smpNewHent=New file list
-smpOpen=Open
-smpOpenHint=Open saved file list
-smpSave=Save
-smpCopyAll=Copy all
-smpCopyNames=Copy only names
-smpCopyNamesHint=Copy only names to buffer
-smpDelete=Delete
-smpDeleteHint=Delete current string
-smpQuit=Quit
-smpQuitHint=Finish and exit
+smCopyNAmes=Copy only names
+smCopyNAmesHint=Copy only names to buffer
 mNew=New
 mNewHint=New file list
 mOpen=Open
@@ -75,5 +61,19 @@ mDelete=Delete
 mDeleteHint=Delete current string
 mQuit=Quit
 mQuitHint=Finish and exit
-mCopyAll=
-mCopyAllHint=
+smpNew=New
+smpNewHent=New file-list
+smpOpen=Open
+smpOpenHint=Open saved file list
+smpSave=Save
+smpSaveHint=Save file list
+smpCopyAll=Copy all
+smpCopyAllHint=Copy all to buffer
+smpCopyNames=Copy only names
+smpCopyNamesHint=Copy only names to buffer
+smpDelete=Delete
+smpDeleteHint=Delete current string
+smpQuit=Quit
+smpQuitHint=Finish and exit
+smCopyNsmesHint=Copy only names to buffer
+smpNewHint=New file list
