--- a/Lang/ru.ini
+++ b/Lang/ru.ini
@@ -44,25 +44,11 @@ smFileListHint=Операции с файлами
 smDelete=Удалить
 smDeleteHint=Удалить текущую строку
 smClear=Очистить
-smClearHint=Очиститть все
+smClearHint=Очистить все
 smCopyAll=Копировать все
 smCopyAllHint=Копировать все в буфер
-smCopyNAmes=Копировать имена
-smCopyNAmesHint=Копировать только имена файлов
-smpNew=Новый
-smpNewHent=Новый
-smpOpen=Открыть
-smpOpenHint=Открыть
-smpSave=Сохранить
-smpSaveHint=Сохранить
-smpCopyAll=Копировать все
-smpCopyAllHint=Копировать все в буфер
-smpCopyNфmes=Копировать имена
-smpCopyNamesHint=Копировать только имена файлов
-smpDelete=Удалить
-smpDeleteHint=Удалить текущую строку
-smpQuit=выход
-smpQuitHint=Закончит и выйти
+smCopyNames=Копировать имена
+smCopyNamesHint=Копировать только имена файлов
 mNew=Новый
 mNewHint=Новый список файлов
 mOpen=Открыть
@@ -75,3 +61,20 @@ mDelete=Удалить
 mDeleteHint=Удалить текущую строку
 mQuit=Выход
 mQuitHint=Закончить работу и выйти
+smpNew=Новый
+smpNewHint=Новый спписок файлов
+smpOpen=Открыть
+smpOpenHint=Открыть сохраненный список файлов
+smpSave=Сохранить
+smpSaveHint=Сохранить список файлов
+smpCopyAll=Копировать все
+smpCopyAllHint=Копировать все в буфер
+smpCopyNames=Копировать имена
+smpCopyNamesHint=Копировать только имена файлов
+smpDelete=Удалить
+smpDeleteHint=Удалить текущую строку
+smpQuit=Выход
+smpQuitHint=Закончит и выйти
+
+
+
