--- a/Lang/en.ini
+++ b/Lang/en.ini
@@ -1,5 +1,5 @@
 [Lang]
-FilderStr=Folder
+FolderStr=Folder
 NeedFiles=Drag files/folders then start "Create links"
 folderFirts=First string must be FOLDER!!!
 Unavailable=Unavailable
