--- a/Lang/ru.ini
+++ b/Lang/ru.ini
@@ -1,6 +1,6 @@
 [Lang]
-FilderStr=Папка
-NeedFiles=Перетащите файлы/папки и нажмите "Create links"
+FolderStr=Папка
+NeedFiles=Перетащите файлы/папки и нажмите "Запустить"
 folderFirts=Первой строкой должна быть ПАПКА!!!
 Unavailable=Недоступно
 Path=Путь
