--- a/Lang/en.ini
+++ b/Lang/en.ini
@@ -1,7 +1,7 @@
 [Lang]
 FolderStr=Folder
-NeedFiles=Drag files/folders then start "Create links"
-folderFirts=First string must be FOLDER!!!
+NeedFiles=Drag files/folders ("from where and what") and start "Create links"
+folderFirts=First string must be FOLDER "Where"!!!
 Unavailable=Unavailable
 Path=Path
 File=File
