--- a/Lang/ru.ini
+++ b/Lang/ru.ini
@@ -1,7 +1,7 @@
 [Lang]
 FolderStr=Папка
-NeedFiles=Перетащите файлы/папки и нажмите "Запустить"
-folderFirts=Первой строкой должна быть ПАПКА!!!
+NeedFiles=Перетащите файлы/папки ("откуда и что") и нажмите "Запустить"
+folderFirts=Первой строкой должна быть ПАПКА "Куда"!!!
 Unavailable=Недоступно
 Path=Путь
 File=Файл
