--- a/Lang/ru.ini
+++ b/Lang/ru.ini
@@ -62,7 +62,7 @@ mDeleteHint=Удалить текущую строку
 mQuit=Выход
 mQuitHint=Закончить работу и выйти
 smpNew=Новый
-smpNewHint=Новый спписок файлов
+smpNewHint=Новый список файлов
 smpOpen=Открыть
 smpOpenHint=Открыть сохраненный список файлов
 smpSave=Сохранить
@@ -74,7 +74,15 @@ smpCopyNamesHint=Копировать только имена файлов
 smpDelete=Удалить
 smpDeleteHint=Удалить текущую строку
 smpQuit=Выход
-smpQuitHint=Закончит и выйти
-
-
-
+smpQuitHint=Закончить работу и выйти
+smCopyNamesHint=Копировать только имена файлов
+smpNewHint=Новый список файлов
+[Settings]
+LangLabel=Язык интерфейса
+LangBoxHint=Выберите язык интерфейса из списка
+ThemeLabel=Тема оформления
+ThemeBoxHint=Выберите тему из списка
+WarnText=Сохранитесь! Смена настроек перезагрузит интерфейс!
+HideSettingsButton=Закрыть окно
+HideSettingsButtonHint=Выход без изменения настроек
+StatusBarHint=Двойной щелкчок открывает настройки
