--- a/Lang/translate_this.ini
+++ b/Lang/translate_this.ini
@@ -3,11 +3,11 @@ FolderStr=Folder
 NeedFiles=Drag files/folders ("from where and what") and start "Create links"
 folderFirts=First string must be FOLDER "Where"!!!
 Unavailable=Unavailable
-Path=Path
-File=File
+Path=Path_translate_this
+File=File_translate_this
 Sise=Size
-TabFiles=Files
-TabList=Flat list
+TabFiles=Files _translate_this
+TabList=Flat list _translate_this
 TabHelp=Help
 sMsgInclideFiles=Include files in them instead of folders?
 sMsgDlgCaption=The logic of enabling folders
@@ -78,7 +78,7 @@ smpQuitHint=Finish and exit
 smCopyNamesHint=Copy only names to buffer
 smpNewHint=New file list
 [Settings]
-LangLabel=Language
+LangLabel=Language _translate_this
 LangBoxHint=Select a language from the list
 ThemeLabel=Theme 
 ThemeBoxHint=Select Theme from the list 
