--- a/Lang/en.ini
+++ b/Lang/en.ini
@@ -1,7 +1,7 @@
 [Lang]
 FolderStr=Folder
-NeedFiles=Drag files/folders ("from where and what") and start "Create links"
-folderFirts=First string must be FOLDER "Where"!!!
+NeedFiles=Drag files/folders then start "Create links"
+folderFirts=There must be a TARGET FOLDER first!!! Drag it or click the folder.
 Unavailable=Unavailable
 Path=Path
 File=File
@@ -47,8 +47,8 @@ smClear=Clear
 smClearHint=Clear all
 smCopyAll=Copy all
 smCopyAllHint=Copy all to buffer
-smCopyNAmes=Copy only names
-smCopyNAmesHint=Copy only names to buffer
+smCopyNames=Copy only names
+smCopyNamesHint=Copy only names to buffer
 mNew=New
 mNewHint=New file list
 mOpen=Open
@@ -62,7 +62,7 @@ mDeleteHint=Delete current string
 mQuit=Quit
 mQuitHint=Finish and exit
 smpNew=New
-smpNewHent=New file-list
+smpNewHint=New file list
 smpOpen=Open
 smpOpenHint=Open saved file list
 smpSave=Save
@@ -75,15 +75,24 @@ smpDelete=Delete
 smpDeleteHint=Delete current string
 smpQuit=Quit
 smpQuitHint=Finish and exit
-smCopyNamesHint=Copy only names to buffer
-smpNewHint=New file list
 [Settings]
 LangLabel=Language
 LangBoxHint=Select a language from the list
-ThemeLabel=Theme 
-ThemeBoxHint=Select Theme from the list 
+ThemeLabel=Theme
+ThemeBoxHint=elect Theme from the list
 WarnText=Save your data! These settings will reload the interface!
 HideSettingsButton=Exit without saving
 HideSettingsButtonHint=Exit without change settings
 StatusBarHint=Double click opens settings
-
+[FolderIcon-Menu]
+FilesAddCaption=Add files
+FilesAddHint=Add multiple files to list
+FolderAddCaption=Add folders
+FolderAddHint=Add folder to list
+[FolderIcon-Hint]
+FolderGrayHint=Add the TERGET folder! The first item should be the Destination folder!
+FolderFullHint=Drag files/folders or Right Click to menu.
+FolderNotFullHint=Drag files/folders, o Rigth Click to menu.
+FolderMAX=25 files max - ini-file settings. Delete some or Run Script.
+[TopBar-Hint]
+TargetPrefix=Target folder >>>
