--- a/Lang/ru.ini
+++ b/Lang/ru.ini
@@ -52,7 +52,7 @@ smCopyNamesHint=Копировать только имена файлов
 mNew=Новый
 mNewHint=Новый список файлов
 mOpen=Открыть
-mOpenHint=Открыть сохраненный список файлов
+mOpenHint=Открыть сохраненный список
 mSave=Сохранить
 mSaveHint=Сохранить список файлов
 mCopyNames=Копировать имена
@@ -60,23 +60,21 @@ mCopyNamesHint=Копировать только имена файлов
 mDelete=Удалить
 mDeleteHint=Удалить текущую строку
 mQuit=Выход
-mQuitHint=Закончить работу и выйти
+mQuitHint=Закончить и выйти
 smpNew=Новый
 smpNewHint=Новый список файлов
 smpOpen=Открыть
-smpOpenHint=Открыть сохраненный список файлов
+smpOpenHint=Открыть сохраненный список
 smpSave=Сохранить
 smpSaveHint=Сохранить список файлов
 smpCopyAll=Копировать все
-smpCopyAllHint=Копировать все в буфер
+smpCopyAllHint=Copy all to buffer
 smpCopyNames=Копировать имена
 smpCopyNamesHint=Копировать только имена файлов
 smpDelete=Удалить
 smpDeleteHint=Удалить текущую строку
 smpQuit=Выход
-smpQuitHint=Закончить работу и выйти
-smCopyNamesHint=Копировать только имена файлов
-smpNewHint=Новый список файлов
+smpQuitHint=Закончить и выйти
 [Settings]
 LangLabel=Язык интерфейса
 LangBoxHint=Выберите язык интерфейса из списка
@@ -86,3 +84,15 @@ WarnText=Сохранитесь! Смена настроек перезагрузит интерфейс!
 HideSettingsButton=Закрыть окно
 HideSettingsButtonHint=Выход без изменения настроек
 StatusBarHint=Двойной щелкчок открывает настройки
+[FolderIcon-Menu]
+FilesAddCaption=Добавит файлы
+FilesAddHint=Добавить файлы в список (мультивыбор)
+FolderAddCaption=Добавить папки
+FolderAddHint=Добавить папки в список
+[FolderIcon-Hint]
+FolderGrayHint=Добавить папку "Куда"! Сначала надо указать в какой папке создать ссылки!
+FolderFullHint=Притащите мышкой файлы/папки или откройте меню правой кнопкой мыши.
+FolderNotFullHint=Притащите мышкой файлы/папки или откройте меню правой кнопкой мыши.
+FolderMAX=25 файлов максимум - указано в настройках ini-файла. Удалите часть файлов/папок или выполните сприпт.
+[TopBar-Hint]
+TargetPrefix=Папка "Куда" >>>
