--- a/Lang/en.ini
+++ b/Lang/en.ini
@@ -8,7 +8,7 @@ File=File
 Sise=Size
 TabFiles=Files
 TabList=Flat list
-TabHelp=Help
+TabAbout=About
 sMsgInclideFiles=Include files in them instead of folders?
 sMsgDlgCaption=The logic of enabling folders
 srtUnavail=Unavailable
