--- a/Lang/ru.ini
+++ b/Lang/ru.ini
@@ -8,7 +8,7 @@ File=Файл
 Sise=Размер
 TabFiles=Файлы
 TabList=Список
-TabHelp=Инфо
+TabAbout=Инфо
 sMsgInclideFiles=Включить в список фалы в папке вместо папки?
 sMsgDlgCaption=Логика обработки папок
 srtUnavail=Недоступно
